<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.example.user.appproject.UpdateActivity">

    <TextView
        android:id="@+id/Desc"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/update_desc"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/EmailLayout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:theme="@style/TextLbl">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/PassLayout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/EmailLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:theme="@style/TextLbl">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passInput"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PassLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@drawable/button_shape"
        android:text="@string/update"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>