<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.example.user.appproject.MainActivity">
    <!--android:background="@drawable/gradient"-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:src="@drawable/security" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/firstNameLayout"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:theme="@style/TextLbl">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtUserFname"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lastnameLayout"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/firstNameLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:theme="@style/TextLbl">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/lastName"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:ems="10"
                    android:hint="@string/lastname"
                    android:inputType="textPersonName"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/EmailLayout"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/lastnameLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:theme="@style/TextLbl">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/emailInput"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/PassLayout"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/EmailLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:theme="@style/TextLbl">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passInput"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPersonName"
                    android:textSize="16sp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/buttonReg"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/PassLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:onClick="onClick"
                android:background="@drawable/button_shape"
                android:text="@string/register"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/buttonReg"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_shape"
                android:onClick="onLogin"
                android:text="@string/title_activity_user_login"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>

    <!-- This xml file allows the user to enter their register details, it also references the background gradient from the drawables folder and assigns that to the
    background of the screen-->